# filespacer

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __main__.py  cli.py  filespacer_gui.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: release.yml
.github/workflows/: ci.yml  release.yml
filespacer/: __init__.py  __main__.py  cli.py  filespacer.py  filespacer_gui.py  gui.py
tests/: __init__.py  test_filespacer.py
