[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filespacer"
version = "1.0.0"
description = "A powerful tool for compressing and decompressing files with CLI and GUI interfaces"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FileSpacer Contributors"},
]
keywords = ["compression", "zstandard", "zip", "cli", "gui", "file-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Compression",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]
dependencies = [
    "click>=8.0.0",
    "zstandard>=0.16.0",
    "tqdm>=4.64.1",
]

[project.optional-dependencies]
gui = [
    "ttkbootstrap>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "build>=0.9.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tilltmk/filespacer"
Documentation = "https://github.com/tilltmk/filespacer#readme"
Repository = "https://github.com/tilltmk/filespacer"
Issues = "https://github.com/tilltmk/filespacer/issues"

[project.scripts]
filespacer = "filespacer.__main__:main"
filespacer-cli = "filespacer.cli:cli"

[tool.setuptools]
packages = ["filespacer", "filespacer.tests"]

[tool.setuptools.package-data]
filespacer = ["*.md"]

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["filespacer"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]